[tool.poetry]
name = "tox-poetry-installer"
version = "0.2.4"
license = "MIT"
authors = ["Ethan Paul <24588726+enpaul@users.noreply.github.com>"]
description = "Tox plugin to install Tox environment dependencies using the Poetry backend and lockfile"
repository = "https://github.com/enpaul/tox-poetry-installer/"
packages = [
  {include = "tox_poetry_installer.py"},
  {include = "tests/*.py", format = "sdist"}
]
keywords = ["tox", "poetry", "plugin"]
readme = "README.md"
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Plugins",
  "Framework :: tox",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Natural Language :: English",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3.6",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: Implementation :: CPython",
]

[tool.poetry.plugins.tox]
poetry_installer = "tox_poetry_installer"

[tool.poetry.dependencies]
python = "^3.6"
poetry = "^1.0.0"
tox = "^2.3.0 || ^3.0.0"

[tool.poetry.dev-dependencies]
bandit = "^1.6.2"
black = {version = "^20.8b1", allow-prereleases = true}
ipython = {version = "^7.18.1", python = "^3.7"}
mypy = "^0.782"
pre-commit = {version = "^2.7.1", python = "^3.6.1"}
pylint = "^2.4.4"
pytest = "^6.0.2"
pytest-cov = "^2.10.1"
reorder-python-imports = {version = "^2.3.5", python = "^3.6.1"}
safety = "^1.9.0"
toml = "^0.10.1"
tox = "^3.20.0"

[build-system]
requires = ["poetry>=1.0.0"]
build-backend = "poetry.masonry.api"
