[tool.poetry]
name = "tox-poetry-installer"
version = "0.8.4"
license = "MIT"
authors = ["Ethan Paul <24588726+enpaul@users.noreply.github.com>"]
description = "A plugin for Tox that lets you install test environment dependencies from the Poetry lockfile"
repository = "https://github.com/enpaul/tox-poetry-installer/"
packages = [
  {include = "tox_poetry_installer"},
  {include = "tests/*.py", format = "sdist"}
]
include = [
  "tox_poetry_installer/py.typed"
]
keywords = ["tox", "poetry", "plugin"]
readme = "README.md"
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Plugins",
  "Framework :: tox",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Natural Language :: English",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.6",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: Implementation :: CPython",
]

[tool.poetry.plugins.tox]
poetry_installer = "tox_poetry_installer"

[tool.poetry.extras]
poetry = ["poetry"]

[tool.poetry.dependencies]
python = "^3.6.1"
poetry = {version = "^1.0.0", optional = true}
poetry-core = "^1.0.0"
tox = "^3.8.0"

[tool.poetry.dev-dependencies]
bandit = "^1.6.2"
black = {version = "^21.12b0", allow-prereleases = true, python = "^3.7"}
blacken-docs = "^1.8.0"
ipython = { version = "^7.18.1", python = "^3.7" }
mdformat = "^0.6"
mdformat-gfm = "^0.2"
mypy = "^0.930"
pre-commit = "^2.7.1"
pre-commit-hooks = "^3.3.0"
pylint = "^2.4.4"
pytest = "^6.0.2"
pytest-cov = "^2.10.1"
reorder-python-imports = "^2.3.5"
safety = "^1.9.0"
toml = "^0.10.1"
tox = "^3.20.0"
types-toml = "^0.10.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
