[tool.poetry]
name = "tox-poetry-installer"
version = "1.0.0b1"
license = "MIT"
authors = ["Ethan Paul <24588726+enpaul@users.noreply.github.com>"]
description = "A plugin for Tox that lets you install test environment dependencies from the Poetry lockfile"
repository = "https://github.com/enpaul/tox-poetry-installer/"
packages = [
  {include = "tox_poetry_installer"},
  {include = "tests/*.py", format = "sdist"}
]
include = [
  "tox_poetry_installer/py.typed"
]
keywords = ["tox", "poetry", "plugin"]
readme = "README.md"
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Plugins",
  "Framework :: tox",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Natural Language :: English",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: Implementation :: CPython",
]

[tool.poetry.plugins.tox]
poetry_installer = "tox_poetry_installer"

[tool.poetry.extras]
poetry = ["poetry", "cleo"]

[tool.poetry.dependencies]
python = "^3.7"
cleo = {version = ">=1.0,<3.0", optional = true}
poetry = {version = "^1.5.0", optional = true}
poetry-core = "^1.1.0"
tox = "^4"

[tool.poetry.group.dev.dependencies]
bandit = "^1.6.2"
black = "^22.3.0"
blacken-docs = "^1.8.0"
ipython = {version = "^8.10.1", python = "^3.8"}
mdformat = "^0.7"
mdformat-gfm = "^0.3"
mypy = "^0.930"
pre-commit = "^2.7.1"
pre-commit-hooks = "^3.3.0"
pylint = "^2.13.0"
pytest = "^6.0.2"
pytest-cov = "^2.10.1"
reorder-python-imports = "^2.3.5"
safety = "^2.2.0"
toml = "^0.10.1"
tox = "^4"
types-toml = "^0.10.1"

[build-system]
requires = ["poetry-core>=1.1.0"]
build-backend = "poetry.core.masonry.api"
